[Mac] Adjust the size, position and color of security indicator divider.

The divider's height, position, and color were all slightly off-spec.

R=avi@chromium.org
BUG=677142

Review-Url: https://codereview.chromium.org/2861653004
Cr-Commit-Position: refs/heads/master@{#469761}

Former-commit-id: c56faf1fbb17173715d43a6d975933f8dac4f1a9